tests/lean/217.lean.expected.out
217.lean:5:28-5:29: error: Placeholder could not be inferred.

Argument `f` is not determined by the other arguments in the application or by the expected type.

context:
⊢ CoreM Unit → Name → ConstantInfo → CoreM Unit
217.lean:5:30-5:31: error: Placeholder could not be inferred.

Argument `init` is not determined by the other arguments in the application or by the expected type.

context:
⊢ CoreM Unit
